[tool.poetry]
name = "web-framework"
version = "0.1.0"
description = ""
authors = ["Mateusz Cisek <mateusz.cisek@eigentech.com>"]

[tool.poetry.dependencies]
python = "^3.9"
gunicorn = "^20.1.0"
WebOb = "^1.8.7"
parse = "^1.19.0"
requests = "^2.27.1"
Jinja2 = "^3.1.2"
whitenoise = "^6.0.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
pylint = "^2.13.8"
pytest = "^7.1.2"
requests-wsgi-adapter = "^0.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
