[tool.poetry]
name = "ramka"
version = "0.1.2"
description = "ramka - a simple Python web framework"
authors = ["Mateusz Cisek <cismat@gmail.com>"]
keywords = [
  "web",
  "framework",
  "wsgi"
]
readme = "README.md"
license = "MIT"

repository = "https://github.com/mateuszcisek/ramka"
homepage = "https://github.com/mateuszcisek/ramka"
documentation = "https://ramka.readthedocs.io"

include = ["LICENSE", "README.md", "CHANGELOG.md"]

classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: MIT License",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = "^3.9"
gunicorn = "^20.1.0"
Jinja2 = "^3.1.2"
parse = "^1.19.0"
requests = "^2.27.1"
WebOb = "^1.8.7"
whitenoise = "^6.0.0"
furo = "^2022.4.7"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
pylint = "^2.13.8"
pytest = "^7.1.2"
requests-wsgi-adapter = "^0.4.1"
shellcheck-py = "^0.8.0"
ipython = "^8.3.0"
pytest-cov = "^3.0.0"
Sphinx = "^4.5.0"
sphinx-rtd-theme = "^1.0.0"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/mateuszcisek/ramka/issues"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
